# OOP

./: .gitignore
Lab03/src/com/nieradko/po/lab1/: Main.java
Lab03/src/com/nieradko/po/lab1/transformacje/: Obrot.java  Skalowanie.java  Transformacja.java  ZlozenieTransformacji.java
Labs/Lab03/src/com/nieradko/po/lab1/transformacje/: BrakTransformacjiOdwrotnejException.java  NiewlasciwyTrojkatException.java  Punkt.java  Translacja.java  Trojkat.java
Projects/CPP/: .clang-tidy  CMakeLists.txt
Projects/CPP-VNEXT/: .clang-tidy  CMakeLists.txt
Projects/CPP-VNEXT/src/: Animal.cpp  Animal.h  CollisionContext.cpp  CollisionContext.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h  Position.cpp  Position.h  World.cpp  World.h  main.cpp
Projects/CPP-VNEXT/src/Animals/: Animal.cpp  Animal.h  Antelope.cpp  Antelope.h  Fox.cpp  Fox.h  Human.cpp  Human.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h
Projects/CPP-VNEXT/src/Plants/: Dandelion.cpp  Dandelion.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Nightshade.cpp  Nightshade.h  PineBorscht.cpp  PineBorscht.h  Plant.cpp  Plant.h
Projects/CPP/src/: Animal.cpp  Animal.h  Organism.cpp  Organism.h  Position.cpp  Position.h  World.cpp  World.h  main.cpp
Projects/CPP/src/Animals/: Animal.cpp  Antelope.cpp  Antelope.h  Fox.cpp  Human.cpp  Human.h  Sheep.cpp  Sheep.h  Turtle.cpp  Wolf.cpp  Wolf.h
Projects/CPP/src/Plants/: Dandelion.h  Grass.h  Guarana.h  Nightshade.cpp  Nightshade.h  PineBorscht.cpp  PineBorscht.h  Plant.cpp  Plant.h
Projects/Java/: pom.xml
Projects/Java/src/main/java/: module-info.java
Projects/Java/src/main/java/com/nieradko/worldsim/: Application.java  IGUIContext.java  IWorldEventsHandler.java
Projects/Java/src/main/java/com/nieradko/worldsim/controllers/: MainController.java  NewGameController.java  (+1 more)
(+49 files in other folders)
